исправление ошибки получения оригинальнх ссылок